<resources>
    <string name="app_name">NSU CPC Admin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="mail">Mail</string>
    <string name="profile">Profile</string>
    <string name="post_a_new_job">Post a new job</string>
    <string name="open_the_door_of_new_opportunity">Open the door of new opportunity</string>
    <string name="cpc_members">CPC Members</string>
    <string name="dummy_member_number">35</string>
    <string name="students">Students</string>
    <string name="recently_added">Recently added</string>
    <string name="see_all">SEE ALL</string>
    <string name="card_company_name">Company Name</string>
    <string name="card_job_position">Job Position</string>
    <string name="card_job_type">Job Type</string>
    <string name="mail_sender_name">Sender Name</string>
    <string name="mail_job_position">Job Position</string>
    <string name="mail_option_menu_icon">⋮</string>
    <string name="profile_user_name">Jhon Doe</string>
    <string name="profile_user_position">Admin</string>
    <string name="profile_edit_profile_button">Edit Profile</string>
    <string name="profile_language_button">Language</string>
    <string name="profile_about_button">About</string>
    <string name="profile_sign_out_button">Sign out</string>
    <string name="splash_admin_dashboard">ADMIN DASHBOARD</string>
    <string name="splash_already_have_an_account">Already have an account?</string>
    <string name="splash_log_in"><u>Log in</u></string>
    <string name="splash_sign_up_button_text">Sign up</string>
    <string name="sign_up_page_text">SIGN UP</string>
    <string name="signup_page_message">Sign up with us to get your dream job. This process take less than a minutes.</string>
    <string name="signup_enter_your_name">Enter Your Name</string>
    <string name="signup_nsu_email">Enter Your NSU Email Address</string>
    <string name="signup_nsu_id">Enter Your 10 digit NSU ID</string>
    <string name="signup_password">Enter Your Password</string>
    <string name="signup_confirm_password">Confirm Password</string>
    <string name="signup_get_started_button">Get started</string>
    <string name="sign_in_page_text">SIGN IN</string>
    <string name="signin_message">Sign in with us to get your dream job.</string>
    <string name="signin_forget_password">Forget Password?</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="don_t_have_an_account_text">Don\'t have an account?</string>
    <string name="sign_up_text_link"><u>Sign Up</u></string>
    <string name="forget_password_page_text">FORGET PASSWORD</string>
    <string name="forget_password_message">Enter your email address below to rest your password</string>
    <string name="forget_password_send_button_text">Send</string>
    <string name="progressbar_please_wait">Please wait</string>
    <string name="edit_profile_add_user_photo">Add User Profile Photo</string>
    <string name="editProfile_enter_your_phone_number">Enter Your Phone Number</string>
    <string name="editProfile_Gender_male">Male</string>
    <string name="editProfile_gender_female">Female</string>
    <string name="editProfile_save_button">Save</string>
    <string name="editProfile_enter_your_present_address">Enter your present address</string>
    <string name="company_name">Company Name</string>
    <string name="position_name">Position Name</string>
    <string name="job_type">Job Type</string>
    <string name="salary">Salary</string>
    <string name="job_description">Job description</string>
    <string name="application_date">Application Date</string>
    <string name="recruiter_email">Recruiter Email</string>
    <string name="goes_to_cpc">Goes to CPC</string>
    <string name="goes_to_company">Goes to company</string>
    <string name="company_logo">Company Logo</string>
    <string name="post">Post</string>
</resources>