<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.auth.LoginActivity">

    <!--Guideline-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="40dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="388dp" />

    <!-- Main screen widget -->

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/sign_in_page_text"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline4"
        android:textColor="@color/blue_500"
        android:typeface="normal"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/signin_message"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
        android:textColor="@color/gray_80"
        android:typeface="normal"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signInUserEmailTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:hint="@string/signup_nsu_email"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signInUserEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_condensed_regular"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
            android:textColor="@color/gray_80" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signInUserPasswordTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/signup_password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/signInUserEmailTextLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signInUserPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_condensed_regular"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
            android:textColor="@color/gray_80" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/signInForgetPasswordTextLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/signin_forget_password"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
        android:textColor="@color/green_700"
        android:typeface="normal"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/signInUserPasswordTextLayout" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/sign_in_button_text"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Button"
        android:textColor="@color/gray_80"
        android:typeface="normal"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/signInForgetPasswordTextLink" />

    <TextView
        android:id="@+id/haveAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:letterSpacing="0.01"
        android:text="@string/don_t_have_an_account_text"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
        android:textColor="@color/black_900"
        android:typeface="normal"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/signupButton" />

    <TextView
        android:id="@+id/signUpLinkText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:letterSpacing="0.03"
        android:text="@string/sign_up_text_link"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1"
        android:textColor="@color/green_700"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="@+id/haveAccountText"
        app:layout_constraintStart_toEndOf="@+id/haveAccountText"
        app:layout_constraintTop_toTopOf="@+id/haveAccountText" />

</androidx.constraintlayout.widget.ConstraintLayout>