<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mailCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="10dp"
        app:cardElevation="@dimen/elevation_default_top_app_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/mailSenderNameText"
                android:layout_width="355dp"
                android:layout_height="28dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_condensed_regular"
                android:text="@string/mail_sender_name"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline5"
                android:textColor="@color/black_800"
                android:typeface="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mailJobPositionText"
                android:layout_width="356dp"
                android:layout_height="21dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/roboto_condensed_regular"
                android:text="@string/mail_job_position"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
                android:textColor="@color/gray_80"
                android:typeface="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mailSenderNameText" />

            <TextView
                android:id="@+id/mailOptionMenuIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/mail_option_menu_icon"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/black_900"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/mailSenderNameText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.89"
                app:layout_constraintStart_toEndOf="@+id/mailSenderNameText"
                app:layout_constraintTop_toTopOf="@+id/mailSenderNameText" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>